google-guest-agent (20210629.00-0ubuntu1~18.04.0) bionic; urgency=medium

  * Rebuild for Bionic. (LP: #1938286)
    - Lower dh-compat to 11.

 -- Utkarsh Gupta <utkarsh.gupta@canonical.com>  Thu, 02 Sep 2021 17:35:03 +0530

google-guest-agent (20210629.00-0ubuntu1) impish; urgency=medium

  * New upstream version 20210629.00. (LP: #1938286)
    - start sshd (#106).
    - more granular service restarts (#111).
    - systemd-notify in agentInit (#113).
    - use IP for MDS (#115).

 -- Utkarsh Gupta <utkarsh.gupta@canonical.com>  Wed, 28 Jul 2021 17:03:35 +0530

google-guest-agent (20210414.00-0ubuntu1) hirsute; urgency=medium

  * New upstream release (LP: #1924589)
    - call restorecon on ssh host keys (#98)
    - add ipv6 forwarded ip support (#101)
    - add a match block to sshd_config for SAs (#99)
    - Update error message for handleHealthCheckRequest. (#105)
    - Add systemd-networkd.service restart dependency
    - start sshd

 -- Balint Reczey <rbalint@ubuntu.com>  Thu, 15 Apr 2021 18:18:15 +0200

google-guest-agent (20201217.02-0ubuntu1) hirsute; urgency=medium

  * New upstream release (LP: #1911448)
  * debian/watch: Fix version handing in the download URL
  * Update vendored files

 -- Balint Reczey <rbalint@ubuntu.com>  Wed, 13 Jan 2021 19:13:59 +0100

google-guest-agent (20200617.00-0ubuntu8) hirsute; urgency=medium

  * debian/rules: Build the package as preferred by upstream
    - Strip the binary
    - Set main.version (LP: #1900897)
  * Declare Breaks: on python3-google-compute-engine
    to force conscious removal of the Python libraries that are not maintained
    and this package make obsolete. (LP: #1905986)

 -- Balint Reczey <rbalint@ubuntu.com>  Wed, 13 Jan 2021 13:24:40 +0100

google-guest-agent (20200617.00-0ubuntu7) hirsute; urgency=medium

  * No-change rebuild using new golang

 -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 11 Nov 2020 22:16:15 +0000

google-guest-agent (20200617.00-0ubuntu6) groovy; urgency=medium
